# CS3820F23-Final-Project

./: .devcontainer.json  Justinwork.hs  Main.hs  README.md  Wasm.cabal
classroom/: autograding.json
docs/: Execution.md  Index.md  Provided.md  Structure.md  Tests.md  Wasm.md
provided-src/: Parser.hs  Syntax.hs  TestRunner.hs
tests/: all_tests  collatz_sum.wast  fact_loop.wast  fib_rec.wast
tests/calls/: add_rec.wast  call_tests  decode_x.wast  divmod_div.wast  encode.wast  euclid.wast  fact_rec.wast  many_calls.wast  many_calls_nested.wast  many_return.wast  mul_rec.wast  params_and_locals.wast  returns.wast  simple_fun_calls.wast
tests/conditionals/: conditional_tests  if_stack.wast  nested_ifs.wast  two_param_if_set.wast
tests/loops/: fib_loop.wast  loop_if_br.wast  loop_if_br_local.wast  loop_tests
tests/numeric/: and.wast  clz.wast  const.wast  constant.wast  constants.wast  ctz.wast  div_s.wast  div_u.wast  empty.wast  eq.wast  eqz.wast  ge_s.wast  ge_u.wast  gt_s.wast  gt_u.wast  le_s.wast  le_u.wast  lt_s.wast  lt_u.wast  mul.wast  muladdeq.wast  ne.wast  numeric_tests  or.wast  popcnt.wast  popcntxor.wast  rem_s.wast  rem_u.wast  rotl.wast  rotr.wast  shl.wast  shr_s.wast  shr_u.wast  sub.wast  subs.wast  sum.wast  sums.wast  xor.wast
tests/variables/: get_set_locals.wast  global_get.wast  global_local.wast  global_set.wast  globals.wast  set_start_params.wast  start_params.wast  tee_locals.wast  variable_tests
