name:                Wasm
version:             0.1
build-type:          Simple
cabal-version:       >=1.10

executable Wasm
  main-is:             Main.hs
  hs-Source-Dirs:      provided-src, src
  other-modules:       Syntax, Parser, Justinwork
  build-depends:       HUnit, base, mtl, parsec, array
  default-language:    Haskell2010

executable Test
  main-is:             TestRunner.hs
  hs-source-dirs:      provided-src, src
  build-depends:       base, process
  default-language:    Haskell2010